--- a/views/_partials/_navigation.ejs
+++ b/views/_partials/_navigation.ejs
@@ -86,6 +86,23 @@
         <a class="dropdown-item" href="/talks/new">Create New</a>
       </div>
     </li>
+    <li class="nav-item dropdown">
+      <a
+        class="menu-item nav-link dropdown-toggle"
+        id="dropdown00"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+        name="space"
+        href="/space"
+        >우주</a
+      >
+      <div class="dropdown-menu" aria-labelledby="dropdown00">
+        <a class="dropdown-item" href="/space">Sports</a>
+        <a class="dropdown-item" href="/space/new">Create New</a>
+      </div>
+    </li>
+    <li class="nav-item dropdown">
   </ul>
 </nav>
 
